fixed a positioning issue with overflow:hidden on landing.css

--- a/css/landing.css
+++ b/css/landing.css
@@ -310,7 +310,8 @@ footer {
     background-color: #FFF0ED;
     display: flex;
     justify-content: space-evenly;
-    position:relative
+    position:relative;
+    overflow: hidden;
 }
 
 .footer__logo {
